--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.481.0",
-    "@reduxjs/toolkit": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "bson": "^6.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
